--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mimemap",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "A MIME type map",
   "main": "mime.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
       "type": "git",
-      "url": "https://github.com/ypyf/mimemapi.git"
+      "url": "https://github.com/ypyf/mimemap.git"
   },
   "keywords": [
     "mime"
